package com.directi.training.lsp.exercise_refactored;

public interface IDuck {
    public void swim();

    public void quack();
}
